k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echodeploy
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      tolerations:
      - operator: Exists
      containers:
      - name: echopod
        image: lbernail/echo:0.7
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /alive
            port: 5000
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          periodSeconds: 2
          successThreshold: 2
          failureThreshold: 2
#        lifecycle:
#          preStop:
#            exec:
#              command:
#              - /bin/sh
#              - -c
#              - sleep 60
      terminationGracePeriodSeconds: 60
