k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echodeploy
  labels:
    app: echo
spec:
  containers:
  - name: echopod
    image: lbernail/echo:0.5
    imagePullPolicy: Always
    livenessProbe:
      httpGet:
        path: /alive
        port: 5000
    readinessProbe:
      httpGet:
        path: /ready
        port: 5000
