k8s/multiple_svc.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: echov1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: echov1
        version: v1
    spec:
      tolerations:
      - operator: Exists
      containers:
      - name: echopod
        image: lbernail/echo:0.5
        imagePullPolicy: Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: echov2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: echov2
        version: v2
    spec:
      tolerations:
      - operator: Exists
      containers:
      - name: echopod
        image: lbernail/echo:0.5
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: echov1
  labels:
    app: echov1
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 5000
  selector:
    app: echov1
---
apiVersion: v1
kind: Service
metadata:
  name: echov2
  labels:
    app: echov2
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 5000
  selector:
    app: echov2
