k8s/service-neg.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
  annotations:
    alpha.cloud.google.com/load-balancer-neg: "true"
    cloud.google.com/neg: "{\"ingress\":true}"
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
