k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  backend:
    # This assumes http-svc exists and routes to healthy endpoints.
    serviceName: echo
    servicePort: 80
